# rust-gcs-simulator

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production.example  Cargo.toml  Dockerfile
backend/docs/: API_CONTRACT.md
backend/migrations/: 20260620000000_init.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: http.rs  mod.rs  websocket.rs
backend/src/db/: mod.rs
backend/src/models/: command.rs  diagnostics.rs  event.rs  launchbox.rs  mod.rs  telemetry.rs  track.rs  vehicle.rs  video.rs
backend/src/services/: diagnostics_service.rs  launchbox_simulator.rs  mod.rs  state_machine.rs  telemetry_router.rs  telemetry_simulator.rs  video_health_simulator.rs
backend/src/storage/: mod.rs
frontend/: .env.example  .env.production.example  Dockerfile  README.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ConnectionStatus.tsx  DiagnosticsPanel.tsx  EventLog.tsx  LaunchboxPanel.tsx  ModeControl.tsx  RadarView.tsx  TrackPanel.tsx  VehiclePanel.tsx  VideoHealthPanel.tsx
frontend/src/pages/: About.tsx  Dashboard.tsx  Diagnostics.tsx  Replay.tsx
frontend/src/types/: command.ts  diagnostics.ts  event.ts  launchbox.ts  telemetry.ts  track.ts  vehicle.ts  videoHealth.ts
frontend/src/utils/: api.ts  mockData.ts
